--- a/home.html
+++ b/home.html
@@ -3,58 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Психологический курс</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-        }
-
-        section {
-            padding: 2em;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>Магазин</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
     <header>
-        <h1>Пройдите психологический курс</h1>
-    </header>
-
-    <section>
-        <h2>Почему стоит выбрать наш курс?</h2>
-        <p>У нас вы получите:</p>
-        <ul>
-            <li>Индивидуальные консультации с опытным психологом</li>
-            <li>Полезные практические навыки для улучшения эмоционального состояния</li>
-            <li>Понимание себя и своих эмоций</li>
-            <li>Секреты психологического благополучия</li>
+        <h1>Магазин</h1>
+        <ul class="menu">
+            <li class="menu-item">
+                <a href="home.html">Home</a>
+            </li>
+            <li class="menu-item">
+                <a href="https://github.com/AidinErkinov/Magazine-odejdy/commit/fde89f7242f737ff1de363e367865c3e4e4e3fae#diff-1b062b89d86c4bd360d644be21410ec92100adac7ed27c5e47a9a38757993f45">
+                    Repostery
+                </a>
+            </li>
         </ul>
-        <p>Не упустите возможность изменить свою жизнь к лучшему!</p>
-        <p>Запишитесь на курс прямо сейчас!</p>
+    </header>
+    <section>
+        <div class="container">
+            <div class="product">
+                Presad
+            </div>
+            <div class="product">
+                UPwew <div class="middlediv">
+                </div>
+            </div>
+            <div class="product">
+                RE
+            </div>
+        </div>
     </section>
 
     <footer>
-        <p>© 2023 Психологический курс. Все права защищены.</p>
+        <p>© 2023 Магазин. Все права защищены.</p>
     </footer>
 
 </body>
