--- a/home.html
+++ b/home.html
@@ -24,14 +24,14 @@
     <section>
         <div class="container">
             <div class="product">
-                Presad
+                <h1>Ponchiki</h1>  
             </div>
-            <div class="product">
-                UPwew <div class="middlediv">
-                </div>
+            <div class="image">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
             </div>
-            <div class="product">
-                RE
+            <div class="description">
+                Описание — композиционная форма, которую используют в литературоведении и лингвистике для подробной характеристики предметов или явлений. 
+                Обобщенно, объекты описания представляют собой перцептивные паттерны - качества (формы, направления, цвет, звук, вес, температуру и т.д.), количественные аспекты (меры и множества) и их отношения, более конкретно - это предметы, процессы, жизнь, характер людей и мн. др. объекты живой, неживой природы и сами субъективные переживания.
             </div>
         </div>
     </section>
