--- a/home.html
+++ b/home.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-
     <header>
         <h1>Магазин</h1>
         <ul class="menu">
