Boot and mixin 10.11.23

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     </header>
     <section>
         <div class="container">
-            <div class="tovar">
+            <div class="tovar absolute-tovar">
                 <div class="product">
                     <h1>Ponchiki</h1>  
                 </div>
