--- a/home.html
+++ b/home.html
@@ -6,19 +6,27 @@
     <title>Магазин</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     <header>
-        <h1>Магазин</h1>
         <ul class="menu">
             <li class="menu-item">
                 <a href="home.html">Home</a>
             </li>
             <li class="menu-item">
                 <a href="https://github.com/AidinErkinov/Magazine-odejdy/commit/fde89f7242f737ff1de363e367865c3e4e4e3fae#diff-1b062b89d86c4bd360d644be21410ec92100adac7ed27c5e47a9a38757993f45">
-                    Repostery
+                    Apps & Games
                 </a>
+            </li>
+            <li class="menu-item">
+                <a href="home.html">Products</a>
+            </li>
+            <li class="menu-item">
+                <a href="home.html">Contact Us</a>
             </li>
         </ul>
     </header>
@@ -26,84 +34,44 @@
         <div class="container">
             <div class="tovar absolute-tovar">
                 <div class="product">
-                    <h1>Ponchiki</h1>  
-                </div>
-                <div class="image">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
+                    <h2>VIRTUAL REALITY</h2>
+                    <h1 class="hhh">PLAY IN 
+                        <u>REAL</u>
+                    </h1>  
                 </div>
                 <div class="description">
-                    Описание — композиционная форма, которую используют в литературоведении и лингвистике для подробной характеристики предметов или явлений. 
-                    Обобщенно, объекты описания представляют собой перцептивные паттерны - качества (формы, направления, цвет, звук, вес, температуру и т.д.), количественные аспекты (меры и множества) и их отношения, более конкретно - это предметы, процессы, жизнь, характер людей и мн. др. объекты живой, неживой природы и сами субъективные переживания.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci facilis, minus eaque minima eveniet placeat facere vel distinctio. Accusantium, modi.
+                </div>
+                <div class="bottom">
+                    Start Shopping
+                </div>
+                <div class="description second-description"> 
+                    <span class="line">                   
+                </span>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit quidem unde nulla tempora et consectetur nisi officiis quisquam blanditiis id nihil veritatis eveniet, dolores explicabo excepturi quos natus tenetur recusandae nesciunt accusantium sint obcaecati reprehenderit. Officiis culpa, nulla quo laudantium natus voluptatum molestias repellendus, error praesentium voluptatem doloremque impedit aperiam.
                 </div>
             </div>
             <div class="tovar">
-                <div class="product">
-                    <h1>Ponchiki</h1>  
-                </div>
                 <div class="image">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
-                </div>
-                <div class="description">
-                    Описание — композиционная форма, которую используют в литературоведении и лингвистике для подробной характеристики предметов или явлений. 
-                    Обобщенно, объекты описания представляют собой перцептивные паттерны - качества (формы, направления, цвет, звук, вес, температуру и т.д.), количественные аспекты (меры и множества) и их отношения, более конкретно - это предметы, процессы, жизнь, характер людей и мн. др. объекты живой, неживой природы и сами субъективные переживания.
-                </div>
             </div>
-            <div class="tovar">
-                <div class="product">
-                    <h1>Ponchiki</h1>  
-                </div>
-                <div class="image">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
-                </div>
-                <div class="description">
-                    Описание — композиционная форма, которую используют в литературоведении и лингвистике для подробной характеристики предметов или явлений. 
-                    Обобщенно, объекты описания представляют собой перцептивные паттерны - качества (формы, направления, цвет, звук, вес, температуру и т.д.), количественные аспекты (меры и множества) и их отношения, более конкретно - это предметы, процессы, жизнь, характер людей и мн. др. объекты живой, неживой природы и сами субъективные переживания.
-                </div>
-            </div>
-                <div class="blank"> 
-                </div>
-            <div class="tovar">
-                <div class="product">
-                    <h1>Ponchiki</h1>  
-                </div>
-                <div class="image">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
-                </div>
-                <div class="description">
-                    Описание — композиционная форма, которую используют в литературоведении и лингвистике для подробной характеристики предметов или явлений. 
-                    Обобщенно, объекты описания представляют собой перцептивные паттерны - качества (формы, направления, цвет, звук, вес, температуру и т.д.), количественные аспекты (меры и множества) и их отношения, более конкретно - это предметы, процессы, жизнь, характер людей и мн. др. объекты живой, неживой природы и сами субъективные переживания.
-                </div>
-            </div>
-            <div class="tovar">
-                <div class="product">
-                    <h1>Ponchiki</h1>  
-                </div>
-                <div class="image">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
-                </div>
-                <div class="description">
-                    Описание — композиционная форма, которую используют в литературоведении и лингвистике для подробной характеристики предметов или явлений. 
-                    Обобщенно, объекты описания представляют собой перцептивные паттерны - качества (формы, направления, цвет, звук, вес, температуру и т.д.), количественные аспекты (меры и множества) и их отношения, более конкретно - это предметы, процессы, жизнь, характер людей и мн. др. объекты живой, неживой природы и сами субъективные переживания.
-                </div>
-            </div>
-            <div class="tovar">
-                <div class="product">
-                    <h1>Ponchiki</h1>  
-                </div>
-                <div class="image">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
-                </div>
-                <div class="description">
-                    Описание — композиционная форма, которую используют в литературоведении и лингвистике для подробной характеристики предметов или явлений. 
-                    Обобщенно, объекты описания представляют собой перцептивные паттерны - качества (формы, направления, цвет, звук, вес, температуру и т.д.), количественные аспекты (меры и множества) и их отношения, более конкретно - это предметы, процессы, жизнь, характер людей и мн. др. объекты живой, неживой природы и сами субъективные переживания.
-                    </div>
-                </div>
-        </div>
     </section>
 
     <footer>
-        <p>© 2023 Магазин. Все права защищены.</p>
+        <ul> 
+            <li class="second-bootom">►
+            </li>
+            <li class="foot-menu">
+                <a class="text">
+                    CHOOSE YOUR SETUP
+                </a>
+            </li>
+            <li class="foot-menu">
+                <a class="text">
+                    CHOOSE YOUR SETUP
+                </a>
+            </li>
+        </ul>
     </footer>
-
 </body>
 </html>
