--- a/home.html
+++ b/home.html
@@ -56,20 +56,17 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/768px-Google_%22G%22_Logo.svg.png" alt="">
             </div>
     </section>
-
     <footer>
-        <ul> 
-            <li class="second-bootom">►
+        <ul class="footer-list"> 
+            <li class="button-list-item"> 
+                <button class="second-button">
+                    <span>►
+                    </span>
+                </button>
             </li>
-            <li class="foot-menu">
-                <a class="text">
-                    CHOOSE YOUR SETUP
-                </a>
-            </li>
-            <li class="foot-menu">
-                <a class="text">
-                    CHOOSE YOUR SETUP
-                </a>
+            <li class="block-div">
+                <div class="footer-div"> 
+                </div>
             </li>
         </ul>
     </footer>
