--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
               </div>
               <div class="col">
                 <div>
-                    <button class="button-head">SHOP</button>
+                    <button class="button-head">☼ | SHOP</button>
                 </div>
               </div>
             </div>
