--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <button class="bottom">Start Shopping</button>
-                    <button class="bottom-near">+</button>
+                    <button id="button-add-product" class="bottom-near">+</button>
                 </div>
                 <div class="description second-description"> 
                     <span class="line">                   
