Teper vse kak nado 04.12.23

--- a/home.html
+++ b/home.html
@@ -47,8 +47,8 @@
     <section>
         <div class="page">
             <div class="tovar absolute-tovar">
-                <div class="product">
-                    <h2>VIRTUAL REALITY</h2>
+                <div>
+                    <h2 class="begin">VIRTUAL REALITY</h2>
                     <h1 class="hhh">PLAY IN 
                         <u>REAL</u>
                     </h1>  
