--- a/product.html
+++ b/product.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">    
     <title>Магазин</title>
-    <link rel="stylesheet" href="second-assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="pop-up"><label for="name">Новый товар:</label>
+        <input id="name" class="pole" type="text">
+        <button id="saveBtn">Добавить товар</button>
+    </div>
     <header>
         <div class="container">
             <div class="row">
@@ -46,8 +50,9 @@
           </div>
     </header>
     <section>
+        <button id="button-add-product" class=>+</button>
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/De.jpeg" alt="Product 1">
                     <h2>Xbox bro</h2>
@@ -56,7 +61,7 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/images.jpeg" alt="Product 2">
                     <h2>Клавакокатура</h2>
@@ -65,7 +70,7 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/Без названия (1).jpeg" alt="Product 1">
                     <h2>Kompucter bro</h2>
@@ -74,7 +79,7 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/De.jpeg" alt="Product 1">
                     <h2>Here we go again</h2>
@@ -83,8 +88,9 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-            <div class="w-100"></div>
-            <div class="col">
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/Без названия.jpeg" alt="Product 2">
                     <h2>Earpods brah</h2>
@@ -93,7 +99,7 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/Без названия.jpeg" alt="Product 2">
                     <h2>Earpods brah</h2>
@@ -102,7 +108,7 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/De.jpeg" alt="Product 1">
                     <h2>Xbox 1</h2>
@@ -111,7 +117,7 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-xl-3">
                 <div class="product">
                     <img src="Img/images.jpeg" alt="Product 2">
                     <h2>Klava i vse</h2>
@@ -120,7 +126,7 @@
                     <button class="page-button">Добавить в корзину</button>
                 </div>
             </div>
-          </div>
+        </div>
     </section>
     <footer>
         <div class="container-fluid">
@@ -155,6 +161,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="second-dist/bundle.js"></script>
+    <script src="dist/bundle.js"></script>
     </body>
 </html>
