--- a/product.html
+++ b/product.html
@@ -11,8 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="pop-up"><label for="name">Новый товар:</label>
-        <input id="name" class="pole" type="text">
+    <div id="pop-up"><label for="name">Название товара:</label>
+        <input id="name" name="name" class="pole" type="text">
+        <label for="description">Описание товара:</label>
+        <textarea id="description" name="description" class="pole" placeholder="Введите текст"></textarea>
         <button id="saveBtn">Добавить товар</button>
     </div>
     <header>
