--- a/product.html
+++ b/product.html
@@ -26,6 +26,14 @@
     </div>
     <header>
         <div class="container">
+            <div class="filter-container"> 
+                <select name="filter" id="filter">
+                    <option value="0">-</option>
+                    <option value="10">10</option>
+                    <option value="100">100</option>
+                    <option value="1000">1000</option>
+                </select>
+            </div>
             <div class="row">
               <div class="col">
                 <div class="logo">
