--- a/product.html
+++ b/product.html
@@ -34,6 +34,11 @@
                     <option value="1000">1000</option>
                 </select>
             </div>
+            <div id="weather">
+                <div class="weather__temp"></div>
+                <div class="weather__humidity"></div>
+                <div class="weather__desc"></div>
+            </div>
             <div class="row">
               <div class="col">
                 <div class="logo">
