--- a/product.html
+++ b/product.html
@@ -38,6 +38,11 @@
                 <div class="weather__temp"></div>
                 <div class="weather__humidity"></div>
                 <div class="weather__desc"></div>
+                <select name="city" id="city" class="city-select">
+                    <option value="London">London</option>
+                    <option value="Moscow">Moscow</option>
+                    <option value="Bishkek">Bishkek</option>
+                </select>
             </div>
             <div class="row">
               <div class="col">
